--- a/pageStyle.css
+++ b/pageStyle.css
@@ -1,12 +1,14 @@
-#list ul li {
-  display: inline-flex;
-  margin: 5px;
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+li {
+  padding: 15px;
 }
 
 .box picture {
-  width: 200px;
-  height: 200px;
-  border: 1px solid #c3c3c3;
   display:flex;
   flex-direction: column;
 }
