--- a/subPageStyle.css
+++ b/subPageStyle.css
@@ -39,7 +39,7 @@ nav ul {
       font-size: 25px;
     }
 
-    p {
+    .main p {
         font-family: "arial", monospace;
         font-size: 18px;
       }
