--- a/subPageStyle.css
+++ b/subPageStyle.css
@@ -16,7 +16,10 @@ nav ul {
   li {
     padding: 15px;
   }
-  
+
+  .main {
+    text-align: center;
+  }
     
     h1, 
     h2,
@@ -39,12 +42,9 @@ nav ul {
       font-size: 25px;
     }
 
-    .main p {
-        font-family: "arial", monospace;
-        font-size: 18px;
-      }
-    
-    
-    .main {
-      text-align: center;
+    p {
+      font-family: "arial", monospace;
+      font-size: 18px;
     }
+    
+    
