--- a/pageStyle.css
+++ b/pageStyle.css
@@ -3,15 +3,12 @@ footer {
   bottom: 1.5%;
 }
 
-nav ul {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
 li {
+  display: inline-block;
+  width: auto;
+  height: 40px;
   padding: 15px;
-  font-size: 16px;
+  font-size: 18px;
 }
   
   h1, 
