--- a/subPageStyle.css
+++ b/subPageStyle.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 481px) {
+@media only screen and (max-width: 480px) {
   h3 {
     font-size: 24px;
   }
@@ -33,7 +33,7 @@ h3 {
   font-size: 1.5rem;
 }
 
-p {
+.main p {
   font-family: "arial", monospace;
   font-size: 1.25rem;
   line-height: 1.6;
