--- a/subPageStyle.css
+++ b/subPageStyle.css
@@ -1,9 +1,9 @@
 @media only screen and (max-width: 480px) {
   h3 {
-    font-size: 24px;
+    font-size: 1.5rem;
   }
   p{
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 }
 
@@ -38,8 +38,8 @@ p {
   font-size: 1.25rem;
   line-height: 1.8;
   text-align: left;
-  padding-left: 20rem;
-  padding-right: 20rem;
+  padding-left: 16rem;
+  padding-right: 16rem;
 }
 
 
