--- a/subPageStyle.css
+++ b/subPageStyle.css
@@ -1,9 +1,10 @@
 @media only screen and (max-width: 480px) {
   h3 {
-    font-size: 1.5rem;
+    font-size: 24px;
   }
   p{
-    font-size: 1.25rem;
+    font-size: 18px;
+    padding: 32.4px;
   }
 }
 
