--- a/subPageStyle.css
+++ b/subPageStyle.css
@@ -1,10 +1,13 @@
 @media only screen and (max-width: 480px) {
+  html {
+    font-size: 16px;
+  }
+
   h3 {
-    font-size: 24px;
+    font-size: 1.5rem;
   }
   p{
-    font-size: 18px;
-    padding: 32.4px;
+    font-size: 1.125rem;
   }
 }
 
