--- a/subPageStyle.css
+++ b/subPageStyle.css
@@ -1,6 +1,10 @@
+html or element selector {
+  -webkit-text-size-adjust: 100%;
+}
+
 @media only screen and (max-width: 480px) {
   html {
-    font-size: 16px;
+    font-size: 18px;
   }
 
   h3 {
