--- a/subPageStyle.css
+++ b/subPageStyle.css
@@ -2,12 +2,25 @@ html or element selector {
   -webkit-text-size-adjust: 100%;
 }
 
+@media only screen and (max-width: 480px) {
+  html {
+    font-size: 18px;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+  p{
+    font-size: 1.125rem;
+  }
+}
 
 html {
+    font-size: 18px;
     border: 4mm ridge rgb(162, 100, 166);
     border-radius: 5mm;
     border-style: dashed double none;
-    margin: 18px;
+    margin: 1.25rem;
 }
 
 h1 {
