--- a/subPageStyle.css
+++ b/subPageStyle.css
@@ -1,5 +1,5 @@
 html or element selector {
-  -webkit-text-size-adjust: 100%;
+ text-size-adjust: 100%;
 }
 
 @media only screen and (max-width: 480px) {
@@ -33,6 +33,7 @@ h1 {
 h2 {
   font-family: "Helvetica", sans-serif;
   font-size: 2.25rem;
+  text-align: center;
   margin-top: 0;
   padding-bottom: 2rem;
 }
@@ -40,6 +41,7 @@ h2 {
 h3 {
   font-family: "Helvetica", sans-serif;
   font-size: 1.5rem;
+  text-align: center;
 }
 
 p {
@@ -67,7 +69,4 @@ nav ul {
     padding: 1rem;
   }
 
-  .main {
-    text-align: center;
-  }
 
