--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+html {
+  -webkit-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
+}
 
 h1 {
   font-family: 'M PLUS Rounded 1c', "arial", sans-serif;
