--- a/subPageStyle.css
+++ b/subPageStyle.css
@@ -1,3 +1,25 @@
+@media screen and (max-width: 480px) {
+  html {
+    font-size: 18px;
+  }
+
+  h1 {
+    font-size: 4rem;
+  }
+
+  h2 {
+    font-size: 2.25rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  p {
+    font-size: 1.25rem;
+  }
+
+}
 
 html {
     -webkit-text-size-adjust: 100%;
