--- a/style.css
+++ b/style.css
@@ -1,23 +1,26 @@
 html {
   -webkit-text-size-adjust: 100%;
   text-rendering: optimizeLegibility;
+  font-size: 18px;
 }
 
 h1 {
   font-family: 'M PLUS Rounded 1c', "arial", sans-serif;
   text-align: center;
-  font-size: 4rem;
+  font-size: 2rem;
   color: rgb(130, 128, 236);
 }
 
 h2 {
   font-family: "Helvetica", sans-serif;
+  font-size: 1.75em;
 }
 
 
 p {
   font-family: "arial", monospace;
   font-style: italic;
+  font-size: 1rem;
 }
 
 footer {
