--- a/subPageStyle.css
+++ b/subPageStyle.css
@@ -17,6 +17,7 @@
 
   p {
     font-size: 1rem;
+    text-align: left;
   }
 
 }
@@ -57,8 +58,8 @@ p {
   font-size: 1rem;
   line-height: 1.8;
   text-align: left;
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 
