--- a/subPageStyle.css
+++ b/subPageStyle.css
@@ -28,16 +28,20 @@ html {
     text-rendering: optimizeLegibility;
     background-color: black;
     font-size: 16px;
-    border: 2mm ridge hsl(32, 86%, 52%);
+    border: 2mm ridge rgb(247, 143, 124);
     border-radius: 5mm;
-    border-style: double none;
+    border-style: none double;
     margin: 1rem;
+}
+
+body {
+  background-image: linear-gradient(#06224d80, #e4aae480);
 }
 
 h1 {
   font-family: "Helvetica", sans-serif;
   font-size: 2rem;
-  color: rgb(102, 231, 235);
+  color: #5ed9dd;
   text-align: center;
 }
 
@@ -56,6 +60,7 @@ h3 {
   text-align: center;
   color: azure;
 }
+
 
 p {
   font-family: "arial", monospace;
@@ -79,9 +84,12 @@ nav ul {
   justify-content: center;
   list-style-type: none;
 }
+
+a {
+  color: rgb(227, 247, 174);
+}
   
   li {
-    background-color: rgb(250, 210, 239);;
     padding: 0.75rem;
   }
 
