--- a/style.css
+++ b/style.css
@@ -5,14 +5,38 @@ html {
   background-color: black;
 }
 
-.box {
-  position: fixed;
-  width:100%;
-  height: 2.25rem;
-  top: 0;
-  background-color: black;
+/* Nav Section */
 
+.dropbtn {
+  font-size: 1.25rem;
+  background-color: black;
+  color: rgb(227, 247, 174);
+  border: none;
 }
+
+.dropdown {
+  display: inline-block;
+  position: relative;
+  border: 1.25rem;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: black;
+  width: 200%;
+}
+
+.dropdown-content a {
+    display: inline-block;
+    color: rgb(227, 247, 174);
+    padding: 0.75rem;
+  }
+
+.dropdown:hover .dropdown-content {
+  display: block;
+  }
+  
 
 body {
   background-image: linear-gradient(#06224d80, #e4aae480);
@@ -20,7 +44,7 @@ body {
 
 h1 {
   font-family: 'M PLUS Rounded 1c', "arial", sans-serif;
-  padding: 3rem;
+  padding: 2rem;
   text-align: center;
   font-size: 2rem;
   background-image: linear-gradient(black, #06224d80);
@@ -46,13 +70,6 @@ footer {
   bottom: 1.5%;
   color: azure;
 }
-
-a {
-  color: rgb(227, 247, 174);
-  padding: 1.25rem;
-}
-
-
 
   .container {
     margin-top: 5%;
