--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@ html {
 }
 
 /* Nav Section */
+.navbar {
+  display: inline-block;
+}
 
 .dropbtn {
-  display: inline-block;
   font-size: 1.25rem;
   background-color: black;
   color: rgb(227, 247, 174);
