--- a/subPageStyle.css
+++ b/subPageStyle.css
@@ -3,22 +3,22 @@
 html {
     -webkit-text-size-adjust: 100%;
     text-rendering: optimizeLegibility;
-    background-color: black;
+    background-color:rgb(193,213,127);
     font-size: 16px;
-    border: 2mm ridge rgb(247, 143, 124);
+    border: 2mm ridge rgb(23,42, 136);
     border-radius: 5mm;
     border-style: none double;
     margin: 1rem;
 }
 
 body {
-  background-image: linear-gradient(#06224d80, #e4aae480);
+  background-color:rgb(236, 248, 255);
 }
 
 h1 {
   font-family: "Helvetica", sans-serif;
   font-size: 2rem;
-  color: #5ed9dd;
+  color: black;
   text-align: center;
 }
 
@@ -26,7 +26,7 @@ h2 {
   font-family: "Helvetica", sans-serif;
   font-size: 1.75rem;
   text-align: center;
-  color: azure;
+  color: rgb(131,149,66);
   margin-top: 0;
   padding-bottom: 2rem;
 }
@@ -35,14 +35,14 @@ h3 {
   font-family: "Helvetica", sans-serif;
   font-size: 1.125rem;
   text-align: center;
-  color: azure;
+  color: rgb(131,149,66);
 }
 
 
 p {
   font-family: "arial", monospace;
   font-size: 1rem;
-  color: azure;
+  color: rgb(131,149,66);
   line-height: 1.8;
   text-align: left;
   padding-left: 5rem;
@@ -52,7 +52,7 @@ p {
 footer {
     position:relative;
     bottom: 1.5%;
-    color: azure;
+    color: black;
 }
 
 nav ul {
@@ -62,7 +62,7 @@ nav ul {
 }
 
 a {
-  color: rgb(227, 247, 174);
+  color: black;
 }
   
   li {
