--- a/photoStyle.css
+++ b/photoStyle.css
@@ -1,115 +1,88 @@
+html {
+	font-size: 18px;
+  }
+
+ @media only screen and (max-width: 1000px) {
+	html {
+	  font-size: 16px;
+	}
+  }
+
 body {
-	background: #e6e6e6;
+	background-color: rgb(254, 231, 218);
+	color: #4a4a4a;
+	font-family: "Work Sans", serif;
 }
 
-nav ul {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	background-color: #010e80;
-	display: table;
+/* Journal */
+.journal {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	padding-bottom: 4rem;
+	background-color: rgb(254, 231, 218);
+	color: #4a4a4a;
+	font-family: "Work Sans", serif;
+  }
+
+.col {
+	display: inline-flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+.photo {
+	width: 70%;
+	margin-bottom: 12px;
+	padding: 1.11rem;
+	border-radius: 5px;
+	background-color: white;
+	font-family: "Merriweather", serif;
+  }
+  
+  .photo .image-container img {
 	width: 100%;
-}
+  }
+  
+  .photo .caption {
+	font-style: italic;
+  }
 
-nav li {
-	display: table-cell
-}
-
-li a {
-	display: block;
-	color: white;
-	text-align: center;
-	padding: 30px 30px;
-	text-decoration: none;
-}
-
-li a:hover {
-	background-color: #111;
-}
-
-h2 a {
-	padding: 33px 25px;
-	color: white;
-	text-decoration: none;
-}
-
-h2 a:hover {
-	background-color: #111;
-}
-
-figcaption{
-  text-align:left;
-}
-
-header {
-	margin-left: 14px;
-}
-
-article {
-	text-align: left;
-	margin: 15px;
-	max-width: 80%;
-	font-size: 18px;
-	line-height: 32px;
-}
-
-img {
-	width: 400px;
-	height: 300px;
-  position:relative;
-  right:28px;
-}
-
-aside {
-	left: 10px;
-	border: 1px solid black;
-	padding: 15px;
-	max-width: 80%;
-	position: relative;
-	border-color: #010e80;
-	border-width: 5px;
-	font-size: 18px;
-}
+  /* Footer */
 
 footer {
-	position: relative;
-	width: 100%;
-	bottom: -100px;
-	background-color: #010e80;
-}
+	display: flex;
+	align-items: center;
+	padding: 0 1%;
+	background-color: #212121;
+	font-family: "Croissant One", "Merriweather", serif;
+  }
+  
+  
+  footer .content {
+	flex-grow: 1;
+	font-style: italic;
+	color: #9b9b9b;
+	line-height: 1.5;
+  }
+  
+  footer p:last-child {
+	padding-bottom: 0;
+  }
+  
+  footer em {
+	color: #cfcfcf;
+  }
 
-footer p {
-	color: white;
-	text-decoration: none;
-	padding: 10px;
-	text-align: center;
-	width: 100%;
-	box-sizing: border-box;
-}
+  a img {
+	  position: relative;
+	  margin-right: 0%;
+  }
 
-footer a {
-	color: white;
-	text-decoration: none;
-	text-align: center;
-	width: 100%;
-}
-
-video {
-	display: block;
-	width: 420px;
-	height: 250px;
-  padding:15px;
-}
-
-audio {
-	padding: 15px;
-	width: 98%;
-  box-sizing: border-box;
-}
-
-embed {
-	width: 400px;
-	height: 458px;
-  padding:15px;
-}
+  
+  @media only screen and (max-width: 750px) {
+	footer {
+	  flex-direction: column;
+	  padding: 0 10% 2rem 10%;
+	}
+  }
