--- a/style.css
+++ b/style.css
@@ -75,10 +75,11 @@ footer {
   color: black;
 }
 
-  .container {
+  #dailybutton {
+    font-size: 2.5rem;
     margin-top: 5%;
     margin-bottom:5%;
-    width: 75%;
+    width: 60%;
     border: 2px solid rgb(23,42, 136);
     border-radius: 20px;
   }
