--- a/vocabularyStyle.css
+++ b/vocabularyStyle.css
@@ -1,7 +1,7 @@
 body {
     margin: 0px;
     background-color: whitesmoke;
-    font-family: 'Rock Salt', cursive;
+    font-family: "Work Sans", serif;
     text-align: center;
   }
 
